// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooModalComponent Snapshots Should be a drawer modal 1`] = `
<yoo-modal
  class="hydrated"
  css-class="drawer"
  data-yoo-modal-host=""
>
  
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <span
        class="hide-icon"
        data-yoo-modal=""
      />
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-heading"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      class="modal-body"
      data-yoo-modal=""
    >
      <div
        class="modal-scroll-container"
        data-yoo-modal=""
      >
        <yoo-slim-scroll
          data-yoo-modal=""
          data-yoo-modal-slot=""
        >
          
        </yoo-slim-scroll>
      </div>
    </div>
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should be a full screen modal 1`] = `
<yoo-modal
  class="hydrated"
  css-class="fullscreen"
  data-yoo-modal-host=""
>
  
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <span
        class="hide-icon"
        data-yoo-modal=""
      />
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-heading"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      class="modal-body"
      data-yoo-modal=""
    >
      <div
        class="modal-scroll-container"
        data-yoo-modal=""
      >
        <yoo-slim-scroll
          data-yoo-modal=""
          data-yoo-modal-slot=""
        >
          
        </yoo-slim-scroll>
      </div>
    </div>
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have a footer 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  has-footer="true"
>
  
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <span
        class="hide-icon"
        data-yoo-modal=""
      />
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-heading"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      class="modal-body"
      data-yoo-modal=""
    >
      <div
        class="modal-scroll-container"
        data-yoo-modal=""
      >
        <yoo-slim-scroll
          data-yoo-modal=""
          data-yoo-modal-slot=""
        >
          
        </yoo-slim-scroll>
      </div>
    </div>
    <div
      attr-layout="row"
      class="modal-footer"
      data-yoo-modal=""
    >
      
      <div
        attr-layout="row"
        attr-layout-align="end center"
        class="footer-buttons"
        data-yoo-modal=""
        data-yoo-modal-slot=""
      >
        
        
      </div>
    </div>
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have a heading and a header 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  heading="this is text"
>
  
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <span
        class="hide-icon"
        data-yoo-modal=""
      />
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-heading"
          data-yoo-modal=""
        >
          this is text
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      class="modal-body"
      data-yoo-modal=""
    >
      <div
        class="modal-scroll-container"
        data-yoo-modal=""
      >
        <yoo-slim-scroll
          data-yoo-modal=""
          data-yoo-modal-slot=""
        >
          
        </yoo-slim-scroll>
      </div>
    </div>
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have a heading icon 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  heading="this is text"
  heading-icon="yo-fire"
>
  
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <span
        class="hide-icon"
        data-yoo-modal=""
      />
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        <span
          class="icon"
          data-yoo-modal=""
        >
          <i
            class="yo-fire"
            data-yoo-modal=""
          />
        </span>
        <span
          class="modal-heading"
          data-yoo-modal=""
        >
          this is text
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      class="modal-body"
      data-yoo-modal=""
    >
      <div
        class="modal-scroll-container"
        data-yoo-modal=""
      >
        <yoo-slim-scroll
          data-yoo-modal=""
          data-yoo-modal-slot=""
        >
          
        </yoo-slim-scroll>
      </div>
    </div>
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have content 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
>
  
  
  
  
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <span
        class="hide-icon"
        data-yoo-modal=""
      />
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-heading"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      class="modal-body"
      data-yoo-modal=""
    >
      <div
        class="modal-scroll-container"
        data-yoo-modal=""
      >
        <yoo-slim-scroll
          data-yoo-modal=""
          data-yoo-modal-slot=""
        >
          
          
                        
          <div>
            Test content
          </div>
          
                        
        </yoo-slim-scroll>
      </div>
    </div>
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have custom primary button text 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  primary-button-text="Hello"
>
  
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <span
        class="hide-icon"
        data-yoo-modal=""
      />
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-heading"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      class="modal-body"
      data-yoo-modal=""
    >
      <div
        class="modal-scroll-container"
        data-yoo-modal=""
      >
        <yoo-slim-scroll
          data-yoo-modal=""
          data-yoo-modal-slot=""
        >
          
        </yoo-slim-scroll>
      </div>
    </div>
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have custom secondary button text 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  secondary-button-text="Hello"
>
  
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <span
        class="hide-icon"
        data-yoo-modal=""
      />
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-heading"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      class="modal-body"
      data-yoo-modal=""
    >
      <div
        class="modal-scroll-container"
        data-yoo-modal=""
      >
        <yoo-slim-scroll
          data-yoo-modal=""
          data-yoo-modal-slot=""
        >
          
        </yoo-slim-scroll>
      </div>
    </div>
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have no header 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  has-header="false"
>
  
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    
    <div
      class="modal-body"
      data-yoo-modal=""
    >
      <div
        class="modal-scroll-container"
        data-yoo-modal=""
      >
        <yoo-slim-scroll
          data-yoo-modal=""
          data-yoo-modal-slot=""
        >
          
        </yoo-slim-scroll>
      </div>
    </div>
    
  </div>
</yoo-modal>
`;
